[project]
name = "phable"
version = "0.1.17"
description = ""
authors = [{ name = "Rick Jennings", email = "rjennings055@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
pandas = ["pandas>=2.2.3,<3"]
pyarrow = ["pyarrow>=17.0.0,<18"]
polars = ["polars>=1.9.0,<2"]

[tool.hatch.build.targets.sdist]
include = ["phable"]

[tool.hatch.build.targets.wheel]
include = ["phable"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.uv]
dev-dependencies = [
    "auto-changelog>=0.6.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 88