[project]
name = "phable"
version = "0.1.26"
description = "A modern Python toolkit for working with Project Haystack tagged data, Xeto specs, and Haxall"
authors = [{ name = "Rick Jennings", email = "rjennings055@gmail.com" }]
requires-python = ">=3.11, <4"
readme = "README.md"
license = "MIT"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=2.2.3,<3"]
pyarrow = ["pyarrow>=17.0.0,<18"]
polars = ["polars>=1.9.0,<2"]

[tool.hatch.build]
directory = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "auto-changelog>=0.6.0",
    "pandas>=2.2.3",
    "polars>=1.34.0",
    "pyarrow>=17.0.0,<18",
    "pytest>=8.3.5",
    "pytest-order>=1.3.0",
    "ruff>=0.11.2",
    "ty>=0.0.5",
]

[tool.ruff]
line-length = 88
